--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -6,7 +6,7 @@
     <div style="padding-left: 3em; padding-right: 5em;">
         <p class="center">
             <p class="center" style="font-family: BlackChancery, DickensScriptSSK; color: #CC0000; font-size: 3em" >{{ .Title }}</p>
-            {{ $imgUnderline := resources.Get "images/design/underline.gif" }}
+            {{ $imgUnderline := resources.Get "images/design/underline1.png" }}
             <p class="center"><img src="{{ $imgUnderline.Permalink }}" style="width: 153; height: 22" alt="-"/></p>
             {{ if strings.ContainsNonSpace .Params.quote }}
             <p class="center" style="color: #FFFFFF"><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&quot;{{.Params.quote }} &quot; </i></p>
