--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,3 +1,6 @@
+{{ define "menu" }}
+    {{ partial "menu.html" }}
+{{ end }}
 {{ define "title" }}
   {{ .Title }} &ndash; {{ .Site.Title }}
 {{ end }}
